--- a/etc/terraform.conf
+++ b/etc/terraform.conf
@@ -2,20 +2,20 @@
 ARCH="amd64"
 
 # base codename
-BASECODENAME="focal"
+BASECODENAME="groovy"
 
 # base version
-BASEVERSION="20.04"
+BASEVERSION="20.10"
 
 # distribution codename
-CODENAME="focal"
+CODENAME="groovy"
 
 # distribution version
-VERSION="20.04"
+VERSION="20.10"
 
 # distribution channel
-#CHANNEL="unstable"
-CHANNEL="all"
+CHANNEL="unstable"
+#CHANNEL="all"
 
 # distribution name
 NAME="ubuntudde"
